Create header base

--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
 </head>
 <body>
     <header>
-        <p>
-            <a href="#"><img src="images/logoBBC.png" alt="logo BBC"></a>
-        </p>
+        <a href="#"><img src="images/logoBBC.png" alt="logo BBC"></a><a href="#"><img src="images/signIn.png" alt="loggin"> Sign in</a>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Sport</a></li>
+            <li><a href="#">Earth</a></li>
+            <li><a href="#">Reel</a></li>
+            <li><a href="#">Worklife</a></li>
+            <li><a href="#">Travel</a></li>
+            <li><a href="#">Culture</a></li>
+            <li><a href="#"><img src="images/" alt="....png"></a></li><!-- JS pour créer le sous menu -->
+        </ul>
+        <input type="search">
     </header>
     <main>
         <p>
