--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#">Worklife</a></li>
                 <li><a href="#">Travel</a></li>
                 <li><a href="#">Culture</a></li>
-                <li><img src="images/....png" alt="plus">
+                <li><img src="images/sus.png" alt="plus">
                     <ul class="submenu">
                     <li><a href="#">Future</a></li>
                     <li><a href="#">TV</a></li>
@@ -40,18 +40,18 @@
             <h2>NEWS</h2>
             <ul class="menuNews">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Israel-Gaza war</a></li>
-                <li><a href="#">War in Ukraine</a></li>
-                <li><a href="#">Climate</a></li>
-                <li><a href="#">Video</a></li>
-                <li><a href="#">World</a></li>
-                <li><a href="#">UK</a></li>
-                <li><a href="#">Buisness</a></li>
-                <li><a href="#">Tech</a></li>
-                <li><a href="#">Science</a></li>
-                <li><a href="#">Entertainment & Arts</a></li>
-                <li><a href="#">Health</a></li>
-                <li><a href="#">World news TV</a></li>
+                <li class="tiniBorder"><a href="#">Israel-Gaza war</a></li>
+                <li class="tiniBorder"><a href="#">War in Ukraine</a></li>
+                <li class="tiniBorder"><a href="#">Climate</a></li>
+                <li class="tiniBorder"><a href="#">Video</a></li>
+                <li class="tiniBorder"><a href="#">World</a></li>
+                <li class="tiniBorder"><a href="#">UK</a></li>
+                <li class="tiniBorder"><a href="#">Buisness</a></li>
+                <li class="tiniBorder"><a href="#">Tech</a></li>
+                <li class="tiniBorder"><a href="#">Science</a></li>
+                <li class="tiniBorder"><a href="#">Entertainment & Arts</a></li>
+                <li class="tiniBorder"><a href="#">Health</a></li>
+                <li class="tiniBorder"><a href="#">World news TV</a></li>
                 <li><a href="#">More</a></li>
             </ul>
         </div>
