--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <nav>
             <ul>
                 <li><a href="#"><img src="images/logoBBC.png" alt="logo BBC" id="logo"></a></li>
-                <li id="signIn"><img src="images/signIn.png" alt="loggin"> Sign in</a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Sport</a></li>
-                <li><a href="#">Earth</a></li>
-                <li><a href="#">Reel</a></li>
-                <li><a href="#">Worklife</a></li>
-                <li><a href="#">Travel</a></li>
-                <li><a href="#">Culture</a></li>
-                <li><img src="images/sus.png" alt="plus">
+                <li id="signIn"><img src="images/signIn.png" alt="loggin" id="signInImage"><p class="mainMenu">Sign in</p></div></li>
+                <li><a href="#" class="mainMenu">Home</a></li>
+                <li><a href="#" class="mainMenu">News</a></li>
+                <li><a href="#" class="mainMenu">Sport</a></li>
+                <li><a href="#" class="mainMenu">Earth</a></li>
+                <li><a href="#" class="mainMenu">Reel</a></li>
+                <li><a href="#" class="mainMenu">Worklife</a></li>
+                <li><a href="#" class="mainMenu">Travel</a></li>
+                <li><a href="#" class="mainMenu">Culture</a></li>
+                <li><img src="images/sus.png" alt="plus" class="mainMenu">
                     <ul class="submenu">
                     <li><a href="#">Future</a></li>
                     <li><a href="#">TV</a></li>
